--- a/build.gradle
+++ b/build.gradle
@@ -46,3 +46,7 @@ buildscript {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:1.5.12.RELEASE")
     }
 }
+
+task wrapper(type: Wrapper) {
+    gradleVersion = '2.0'
+}
