Added SQLite dependencies w gradle to proj

--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ repositories {
 dependencies {
 	compile 'org.springframework.boot:spring-boot-starter-web'
 	compile 'javax.servlet:jstl'
-	
+	compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.25.2'
 	testCompile 'junit:junit:4.12'
 }
 
